# assistantbot_bedrock

./: .gitignore  README.md  pyproject.toml
chatbot_bedrock/: backend.py  constant.py  embedding.py  frontend.py  homepage.py  settings.py  utils.py
chatbot_bedrock/backend/: __init__.py  backend.py  enums.py  utils.py
chatbot_bedrock/backend/embedding/: __init__.py  embedding.py
chatbot_bedrock/backend/prompts/: __init__.py  prompts.py
chatbot_bedrock/components/: navigation.py  sidebar.py
chatbot_bedrock/pages/: chatbot.py  pdfchat.py
